k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2
  labels:
    app.kubernetes.io/name: oauth2
    app.kubernetes.io/part-of: oauth2-system
