k8s/base/auth-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: oauth2
  labels:
    app: auth-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: auth-server
